--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
     "babel-eslint": "9.0.0",
     "eslint": "5.12.0",
     "eslint-plugin-react-hooks": "^1.6.0",
+    "humps": "^2.0.1",
+    "husky": "^1.3.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "2.1.8"
@@ -13,11 +16,10 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
+    "test": "react-scripts test --env=jsdom --coverage",
+    "eject": "react-scripts eject",
+    "lint": "eslint --ext .jsx --ext .js .",
+    "pretest": "yarn lint"
   },
   "browserslist": [
     ">0.2%",
